Refactor the entire codebase.
Some reorganization skills I learned from other extensions. Applying
them here since it would be easier to manage this way.

--- a/background.html
+++ b/background.html
@@ -1,185 +1,10 @@
-<!DOCTYPE html>
-<!-- Mohamed Mansour 2009 (http://mohamedmansour.com) -->
-<html>
-<script>
-  // Settings for reload all tabs.
-  settings = {
-    get reloadAllWindows() {
-      return localStorage['reload_all_windows'] === 'true';
-    },
-    set reloadAllWindows(val) {
-      localStorage['reload_all_windows'] = val;
-    },
-    get shortcutKeyCode() {
-      var key = localStorage['shortcut_key_code'];
-      return (typeof key == 'undefined') ? 82 : key;
-    },
-    set shortcutKeyCode(val) {
-      localStorage['shortcut_key_code'] = val;
-    },
-    get shortcutKeyAlt() {
-      var key = localStorage['shortcut_key_alt'];
-      return (typeof key == 'undefined') ? false : key === 'true';
-    },
-    set shortcutKeyAlt(val) {
-      localStorage['shortcut_key_alt'] = val;
-    },
-    get shortcutKeyShift() {
-      var key = localStorage['shortcut_key_shift'];
-      return (typeof key == 'undefined') ? true : key === 'true';
-    },
-    set shortcutKeyShift(val) {
-      localStorage['shortcut_key_shift'] = val;
-    },
-    get version() {
-      return localStorage['version'];
-    },
-    set version(val) {
-      localStorage['version'] = val;
-    },
-    get firstRun() {
-      return localStorage['first_run'];
-    },
-    set firstRun(val) {
-      localStorage['first_run'] = val;
-    },
-    get contextMenu() {
-      var key = localStorage['context_menu'];
-      return (typeof key == 'undefined') ? true : key === 'true';
-    },
-    set contextMenu(val) {
-      localStorage['context_menu'] = val;
-      setContextMenuVisible(val);
-    }
-  }
-
-  ////////////////////////////////////////
-  /**
-  * Reload all |tabs| one by one.
-  * @param win Window to reload.
-  */
-  function reloadWindow(win) {
-    chrome.tabs.getAllInWindow(win.id, function reloadTabs(tabs) {
-      // For each tab in the current window, refresh it.
-      for (var i in tabs) {
-        var tab = tabs[i];
-        chrome.tabs.update(tab.id, {url: tab.url, selected: tab.selected}, null);
-      }
-    });
-  }
-
-  /**
-  * Reload all tabs in all windows one by one.
-  */
-  function reloadAllWindows() {
-    chrome.windows.getAll({}, function(windows) {
-      for (var i in windows)
-        reloadWindow(windows[i]);
-    });
-  }
-
-  /**
-  * Initiate a main reload. This will take into account of the options set
-  * by the user.
-  */
-  function reload() {
-    if (settings.reloadAllWindows)
-      reloadAllWindows();
-    else
-      chrome.windows.getCurrent(reloadWindow);
-  }
-
-  /**
-  * Get the version number from the manifest.
-  */
-  function getVersion() {
-    var version = 'NaN';
-    var xhr = new XMLHttpRequest();
-    xhr.open('GET', chrome.extension.getURL('manifest.json'), false);
-    xhr.send(null);
-    var manifest = JSON.parse(xhr.responseText);
-    return manifest.version;
-  }
-
-  /**
-  * Checks if the shortcut key is valid to reload all tabs.
-  * @param keys the list of keys allowed in a json object.
-  */
-  function validShortcutKeys(keys) {
-    // TODO - maybe cache these settings.
-    return (keys.code == settings.shortcutKeyCode &&
-            keys.alt == settings.shortcutKeyAlt &&
-            keys.shift == settings.shortcutKeyShift);
-  }
-
-  /**
-  * Handles the request coming back from an external extension.
-  * @param request The request that the extension is passing.
-  * @parma response The response that will be sent back.
-  */
-  function setContextMenuVisible(visible) {
-    chrome.contextMenus.removeAll();
-    if (visible) {
-      var contextMenuProperty = {
-        type: 'normal',
-        title: 'Reload all tabs',
-        contexts: ['all'],
-        onclick: reload
-      };
-      chrome.contextMenus.create(contextMenuProperty);
-    }
-  }
-  
-  /**
-   * When the extension first installed. We need to update all windows with
-   * the content script.
-   */
-  function onInstall() {
-    chrome.windows.getAll({}, function(windows) {
-      for (var w in windows) {
-        chrome.tabs.getAllInWindow(windows[w].id, function(tabs) {
-          for (var t in tabs) {
-            chrome.tabs.executeScript(tabs[t].id, 
-                {file: 'keyboard_handler', allFrames: true});
-          }
-        });
-      }  
-    });
-  }
-  
-  /**
-  * Initialization routine.
-  */
-  function init() {
-    // Check if the version has changed. In case we want to do something in the future.
-    var currVersion = getVersion();
-    var prevVersion = settings.version
-    if (currVersion != prevVersion) {
-      // Check if we just installed this extension.
-      if (typeof prevVersion == 'undefined') {
-        onInstall();
-      }
-      // Update the version incase we want to do something in future.
-      settings.version = currVersion;
-    }
-
-    // Add a listener to the content script can request to.
-    chrome.extension.onRequest.addListener(function(request, sender, response) {
-      if (validShortcutKeys(request))
-        reload();
-    });
-    
-    // Listens on browser action callbacks.
-    chrome.browserAction.onClicked.addListener(function(tab) {
-      reload();
-    });
-    
-    // Initialize the context menu.
-    setContextMenuVisible(settings.contextMenu);
-  }
-
-  // Lets initialize the Reloader script.
-  init();
-
+<!DOCTYPE html> 
+<html> 
+<script type="text/javascript" src="/js/functions.js"></script>
+<script type="text/javascript" src="/js/settings.js"></script>
+<script type="text/javascript" src="/js/reload_controller.js"></script>
+<script type="text/javascript">
+  var reloadController = new ReloadController();
+  reloadController.init();
 </script>
-</html>
+</html> 
