Implement refreshing pinned tabs only.
Includes an option where the user can choose just to reload pinned
tabs. If such setting is enabled, only those pinned tabs can be
reloaded. Any other tab will not be affected.

--- a/options.html
+++ b/options.html
@@ -30,7 +30,7 @@
       <div class="extension-options">
         <img src="/img/browser-action.png" alt="Reload All Tabs Browser Action" />
         <p>To remove the button, right click on the icon and choose
-           <strong>hide</strong>.</p>
+           <strong>Hide button</strong>.</p>
         <p>To show that the button again, visit the 
            <a href="#" id="button-extension">chrome://extensions/</a> page, and
            click on <strong>Show button</strong>.</p>
@@ -44,6 +44,8 @@
           <dd><input id="contextMenu" type="checkbox" /></dd>
           <dt>Reload all windows:</dt>
           <dd><input id="reloadAllWindows" type="checkbox" /></dd>
+          <dt>Reload only pinned tabs:</dt>
+          <dd><input id="pinnedOnly" type="checkbox" /></dd>
           <dt>Keyboard shortcut:</dt>
           <dd>
             Ctrl <input type="checkbox" checked="checked" disabled="disabled"/> + 
