Update links to issue tracker

--- a/options.html
+++ b/options.html
@@ -19,7 +19,7 @@
        Visit extension page
       </a>,
       <a
-       href="http://groups.google.com/group/mohamedmansour-extensions">
+       href="https://github.com/mohamedmansour/reload-all-tabs-extension/issues">
        File bugs and suggestions
       </a><br/><br/>
       You should follow me on Twitter <a href="http://twitter.com/mohamedmansour">@mohamedmansour</a>
@@ -88,7 +88,7 @@
       <button id="button-close">Close</button>
     </div>
     <div id="credits">
-      Extension developed by <a href="http://www.mohamedmansour.com">Mohamed Mansour</a>, 
+      Extension developed by <a href="http://mohamedmansour.com">Mohamed Mansour</a>, 
       Source Code available in <a href="http://github.com/mohamedmansour/reload-all-tabs-extension">GitHub</a>,
       Icon by <a href="http://www.mouserunner.net/">Ken Saunders</a>
     </div>
