Add storage notification for updates

--- a/options.html
+++ b/options.html
@@ -41,6 +41,15 @@
         <dl>
           <dt>Enable context menu:</dt>
           <dd><input id="contextMenu" type="checkbox" /></dd>
+        </dl>
+      </div>
+    </div>
+    <div class="extension-template">
+      <div class="extension-header">Keyboard Shortcut Options</div>
+      <div class="extension-options">
+        <dl>
+          <dt>Enable Keyboard Shortcut:</dt>
+          <dd><input id="enableKeyboardShortcut" type="checkbox" /></dd>
           <dt>Reload all windows:</dt>
           <dd><input id="reloadAllWindows" type="checkbox" /></dd>
           <dt>Reload only pinned tabs:</dt>
