Update icons by Eren Song

--- a/options.html
+++ b/options.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="/js/keyboard_handler.js"></script>
   <script type="text/javascript" src="/js/options.js"></script>
 </head>
-<body> 
+<body>
   <div id="body-container">
     <div id="header">
       <h1>Reload All Tabs <em id="version"></em></h1>
@@ -30,7 +30,7 @@
         <img src="/img/browser-action.png" alt="Reload All Tabs Browser Action" />
         <p>To remove the button, right click on the icon and choose
            <strong>Hide button</strong>.</p>
-        <p>To show that the button again, visit the 
+        <p>To show that the button again, visit the
            <a href="#" id="button-extension">chrome://extensions/</a> page, and
            click on <strong>Show button</strong>.</p>
       </div>
@@ -56,7 +56,7 @@
           <dd><input id="pinnedOnly" type="checkbox" /></dd>
           <dt>Keyboard shortcut:</dt>
           <dd>
-            Ctrl <input type="checkbox" checked="checked" disabled="disabled"/> + 
+            Ctrl <input type="checkbox" checked="checked" disabled="disabled"/> +
             Shift <input id="shortcutKeyShift" type="checkbox" /> +
             Alt <input id="shortcutKeyAlt" type="checkbox" /> +
             <select id="shortcutKeyCode">
@@ -97,9 +97,9 @@
       <button id="button-close">Close</button>
     </div>
     <div id="credits">
-      Extension developed by <a href="http://mohamedmansour.com">Mohamed Mansour</a>, 
+      Extension developed by <a href="http://mohamedmansour.com">Mohamed Mansour</a>,
       Source Code available in <a href="http://github.com/mohamedmansour/reload-all-tabs-extension">GitHub</a>,
-      Icon by <a href="http://www.mouserunner.net/">Ken Saunders</a>
+      Icon by <a href="http://erensong.com/">Eren Song</a>
     </div>
   </div>
 </body>
