Context Menu fixes
Fixes #6 and #7

--- a/options.html
+++ b/options.html
@@ -36,12 +36,16 @@
       </div>
     </div>
     <div class="extension-template">
-      <div class="extension-header">Main Options</div>
+      <div class="extension-header">Window Options</div>
       <div class="extension-options">
-        <dl>
           <dt>Enable context menu:</dt>
           <dd><input id="contextMenu" type="checkbox" /></dd>
-        </dl>
+          <dt>Reload window:</dt>
+          <dd><input id="reloadWindow" type="checkbox" /></dd>
+          <dt>Reload all windows:</dt>
+          <dd><input id="reloadAllWindows" type="checkbox" /></dd>
+          <dt>Reload only pinned tabs:</dt>
+          <dd><input id="pinnedOnly" type="checkbox" /></dd>
       </div>
     </div>
     <div class="extension-template">
@@ -50,10 +54,6 @@
         <dl>
           <dt>Enable Keyboard Shortcut:</dt>
           <dd><input id="enableKeyboardShortcut" type="checkbox" /></dd>
-          <dt>Reload all windows:</dt>
-          <dd><input id="reloadAllWindows" type="checkbox" /></dd>
-          <dt>Reload only pinned tabs:</dt>
-          <dd><input id="pinnedOnly" type="checkbox" /></dd>
           <dt>Keyboard shortcut:</dt>
           <dd>
             Ctrl <input type="checkbox" checked="checked" disabled="disabled"/> +
