Implement  Pinned Tabs and Unpinned Tabs Reload

--- a/options.html
+++ b/options.html
@@ -36,16 +36,18 @@
       </div>
     </div>
     <div class="extension-template">
-      <div class="extension-header">Window Options</div>
+      <div class="extension-header">Context Menu (Right Click)</div>
       <div class="extension-options">
-          <dt>Enable context menu:</dt>
-          <dd><input id="contextMenu" type="checkbox" /></dd>
-          <dt>Reload window:</dt>
+        <dl>
+          <dt>Reload all tabs in current window:</dt>
           <dd><input id="reloadWindow" type="checkbox" /></dd>
-          <dt>Reload all windows:</dt>
+          <dt>Reload all tabs in all windows:</dt>
           <dd><input id="reloadAllWindows" type="checkbox" /></dd>
-          <dt>Reload only pinned tabs:</dt>
-          <dd><input id="pinnedOnly" type="checkbox" /></dd>
+          <dt>Reload only pinned tabs in current window:</dt>
+          <dd><input id="reloadPinnedOnly" type="checkbox" /></dd>
+          <dt>Reload only unpinned tabs in current window:</dt>
+          <dd><input id="reloadUnpinnedOnly" type="checkbox" /></dd>
+        </dl>
       </div>
     </div>
     <div class="extension-template">
