Implement Left and Right Tab Reloads as context menu Fixes #14

--- a/options.html
+++ b/options.html
@@ -47,6 +47,10 @@
           <dd><input id="reloadPinnedOnly" type="checkbox" /></dd>
           <dt>Reload only unpinned tabs in current window:</dt>
           <dd><input id="reloadUnpinnedOnly" type="checkbox" /></dd>
+          <dt>Reload all tabs to the left:</dt>
+          <dd><input id="reloadAllLeft" type="checkbox" /></dd>
+          <dt>Reload all tabs to the right:</dt>
+          <dd><input id="reloadAllRight" type="checkbox" /></dd>
         </dl>
       </div>
     </div>
