add close tabs left/right

--- a/options.html
+++ b/options.html
@@ -66,7 +66,10 @@
           <dd><input id="reloadAllLeft" type="checkbox" /></dd>
           <dt>Reload all tabs to the right:</dt>
           <dd><input id="reloadAllRight" type="checkbox" /></dd>
-        </dl>
+          <dt>Close all tabs to the left:</dt>
+          <dd><input id="closeAllLeft" type="checkbox" /></dd>
+          <dt>Close all tabs to the right:</dt>
+          <dd><input id="closeAllRight" type="checkbox" /></dd>        </dl>
       </div>
     </div>
     <div class="extension-template">
