put </dl> on its own line
per your request!

--- a/options.html
+++ b/options.html
@@ -69,7 +69,8 @@
           <dt>Close all tabs to the left:</dt>
           <dd><input id="closeAllLeft" type="checkbox" /></dd>
           <dt>Close all tabs to the right:</dt>
-          <dd><input id="closeAllRight" type="checkbox" /></dd>        </dl>
+          <dd><input id="closeAllRight" type="checkbox" /></dd>
+	</dl>
       </div>
     </div>
     <div class="extension-template">
