customize browser_action
Splitting initial PR into 2:

this one only contains the changes to allow setting the browser_action

--- a/options.html
+++ b/options.html
@@ -35,6 +35,20 @@
       </div>
     </div>
     <div class="extension-template">
+      <div class="extension-header">Menu Button (Default)</div>
+      <div class="extension-options">
+        <dl>
+          <dt>When clicking the menu, reload</dt>
+          <dd>
+            <select id="buttonDefaultAction">
+              <option value="allWindows">All Windows</option>
+              <option value="window">Current Window</option>
+              <option value="pinned">Current Window, Pinned tabs</option>
+              <option value="unpinned">Current Window, Unpinned tabs</option>
+            </select>
+          </dd>
+        </dl>
+      </div>
       <div class="extension-header">Context Menu (Right Click)</div>
       <div class="extension-options">
         <p>When you have multiple checkboxes checked, it will place all context menus under one parent "Reload All Tabs" menu.</p>
