enable timed reloads

--- a/options.html
+++ b/options.html
@@ -70,6 +70,8 @@
           <dd><input id="closeAllLeft" type="checkbox" /></dd>
           <dt>Close all tabs to the right:</dt>
           <dd><input id="closeAllRight" type="checkbox" /></dd>
+          <dt>Enable Timed Reloads? </dt>
+          <dd><input id="enableTimedReloads" type="checkbox" /></dd>
         </dl>
       </div>
     </div>
