Apply suggestions from code review
Nit pics

--- a/options.html
+++ b/options.html
@@ -38,7 +38,7 @@
       <div class="extension-header">Menu Button (Default)</div>
       <div class="extension-options">
         <dl>
-          <dt>When clicking the menu, reload</dt>
+          <dt>When clicking the menu on toolbar, reload</dt>
           <dd>
             <select id="buttonDefaultAction">
               <option value="allWindows">All Windows</option>
