Change wordings of default browser action

--- a/options.html
+++ b/options.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Reload All Tabs Options</title>
   <link rel="stylesheet" type="text/css" href="/css/options.css" />
   <script type="text/javascript" src="/js/functions.js"></script>
   <script type="text/javascript" src="/js/options.js"></script>
 </head>
+
 <body>
   <div id="body-container">
     <div id="header">
@@ -13,14 +15,12 @@
     </div>
     <p>
       Make sure you save the settings after your done editing!
-      <a
-       href="https://chrome.google.com/webstore/detail/midkcinmplflbiflboepnahkboeonkam">
-       Visit extension page
+      <a href="https://chrome.google.com/webstore/detail/midkcinmplflbiflboepnahkboeonkam">
+        Visit extension page
       </a>,
-      <a
-       href="https://github.com/mohamedmansour/reload-all-tabs-extension/issues">
-       File bugs and suggestions
-      </a><br/><br/>
+      <a href="https://github.com/mohamedmansour/reload-all-tabs-extension/issues">
+        File bugs and suggestions
+      </a><br /><br />
       You should follow me on Twitter <a href="http://twitter.com/mohamedmansour">@mohamedmansour</a>
     </p>
     <div class="extension-template">
@@ -28,17 +28,14 @@
       <div class="extension-options">
         <img src="/img/browser-action.png" alt="Reload All Tabs Browser Action" />
         <p>To remove the button, right click on the icon and choose
-           <strong>Hide button</strong>.</p>
+          <strong>Hide button</strong>.
+        </p>
         <p>To show that the button again, visit the
-           <a href="#" id="button-extension">chrome://extensions/</a> page, and
-           click on <strong>Show button</strong>.</p>
-      </div>
-    </div>
-    <div class="extension-template">
-      <div class="extension-header">Menu Button (Default)</div>
-      <div class="extension-options">
+          <a href="#" id="button-extension">chrome://extensions/</a> page, and
+          click on <strong>Show button</strong>.
+        </p>
         <dl>
-          <dt>When clicking the menu on toolbar, reload</dt>
+          <dt>When clicking the browser action, reload:</dt>
           <dd>
             <select id="buttonDefaultAction">
               <option value="allWindows">All Windows</option>
@@ -51,7 +48,8 @@
       </div>
       <div class="extension-header">Context Menu (Right Click)</div>
       <div class="extension-options">
-        <p>When you have multiple checkboxes checked, it will place all context menus under one parent "Reload All Tabs" menu.</p>
+        <p>When you have multiple checkboxes checked, it will place all context menus under one parent "Reload All Tabs"
+          menu.</p>
         <p>When you have just a single context menu selected, there will be no parent.</p>
         <dl>
           <dt>Reload all tabs in current window:</dt>
@@ -95,7 +93,8 @@
       <div class="extension-header">Keyboard Shortcut Options</div>
       <div class="extension-options">
         <p>To setup the keyboard shortcut or change it, please visit the shortcuts page in Chrome:
-          <span id="keyboardShortcutUpdate">chrome://extensions/shortcuts</span></p>
+          <span id="keyboardShortcutUpdate">chrome://extensions/shortcuts</span>
+        </p>
         <img src="/img/keyboard-shortcut.png" alt="Reload All Tabs Keyboard Shortcut" />
         <dl>
           <dt>Current keyboard shortcut:</dt>
@@ -115,4 +114,5 @@
     </div>
   </div>
 </body>
+
 </html>
