Update extension to Manifest V3
Fixes #33

--- a/options.html
+++ b/options.html
@@ -4,8 +4,7 @@
 <head>
   <title>Reload All Tabs Options</title>
   <link rel="stylesheet" type="text/css" href="/css/options.css" />
-  <script type="text/javascript" src="/js/functions.js"></script>
-  <script type="text/javascript" src="/js/options.js"></script>
+  <script type="text/javascript" src="/options.js"></script>
 </head>
 
 <body>
