--- a/options.html
+++ b/options.html
@@ -45,6 +45,8 @@
           </dd>
         </dl>
       </div>
+    </div>
+    <div class="extension-template">
       <div class="extension-header">Context Menu (Right Click)</div>
       <div class="extension-options">
         <p>When you have multiple checkboxes checked, it will place all context menus under one parent "Reload All Tabs"
