Implement: Automatically save options
This is to eliminate mistakes when users forget to save.
It will change the save notifier next to the action committed so
user will get extra feedback

Fixes #4

--- a/options.html
+++ b/options.html
@@ -104,15 +104,14 @@
       </div>
     </div>
     <div id="extension-footer">
-      <button id="button-save">Save</button>
       <button id="button-close">Close</button>
-      <span id="info-message">Options saved!</span>
     </div>
     <div id="credits">
       Extension developed by <a href="http://mohamedmansour.com">Mohamed Mansour</a>,
       Source Code available in <a href="http://github.com/mohamedmansour/reload-all-tabs-extension">GitHub</a>,
       Icon by <a href="http://erensong.com/">Eren Song</a>
     </div>
+    <span id="info-message">Saved!</span>
   </div>
 </body>
 
