--- a/options.html
+++ b/options.html
@@ -76,15 +76,8 @@
       <div class="extension-header">Advanced Options</div>
       <div class="extension-options">
         <dl>
-          <dt>Reload the following tabs on startup:</dt>
-          <dd>
-            <select id="reloadStartup">
-              <option value="all">All tabs</option>
-              <option value="pinned">Pinned tabs</option>
-              <option value="unpinned">Unpinned tabs</option>
-              <option value="none">None</option>
-            </select>
-          </dd>
+          <dt>Enable timed reloads</dt>
+          <dd><input id="enableTimedReloads" type="checkbox" /></dd>
           <dt>Bypass Cache when reloading:</dt>
           <dd><input id="bypassCache" type="checkbox" /></dd>
         </dl>
