reload grouped tabs and matched url tabs

--- a/options.html
+++ b/options.html
@@ -61,10 +61,14 @@
           <dd><input id="reloadPinnedOnly" type="checkbox" /></dd>
           <dt>Reload only unpinned tabs in current window:</dt>
           <dd><input id="reloadUnpinnedOnly" type="checkbox" /></dd>
+          <dt>Reload only grouped tabs in current window:</dt>
+          <dd><input id="reloadGroupedOnly" type="checkbox" /></dd>
           <dt>Reload all tabs to the left:</dt>
           <dd><input id="reloadAllLeft" type="checkbox" /></dd>
           <dt>Reload all tabs to the right:</dt>
           <dd><input id="reloadAllRight" type="checkbox" /></dd>
+          <dt>Reload all tabs that starts with urls(comma separated):</dt>
+          <dd><textarea id="reloadAllMatched" placeholder="www.example1.com, www.example2.com" maxlength="1000"></textarea></dd>
           <dt>Close all tabs to the left:</dt>
           <dd><input id="closeAllLeft" type="checkbox" /></dd>
           <dt>Close all tabs to the right:</dt>
