--- a/options.html
+++ b/options.html
@@ -20,7 +20,7 @@
       <a href="https://github.com/mohamedmansour/reload-all-tabs-extension/issues">
         File bugs and suggestions
       </a><br /><br />
-      You should follow me on Twitter <a href="http://twitter.com/mohamedmansour">@mohamedmansour</a>
+      You should follow me on Twitter <a href="http://twitter.com/mohamedmansour">@mohamedmansour</a> for feature requests or reporting bugs!
     </p>
     <div class="extension-template">
       <div class="extension-header">Browser Action</div>
@@ -61,13 +61,13 @@
           <dd><input id="reloadPinnedOnly" type="checkbox" /></dd>
           <dt>Reload only unpinned tabs in current window:</dt>
           <dd><input id="reloadUnpinnedOnly" type="checkbox" /></dd>
-          <dt>Reload only grouped tabs in current window:</dt>
+          <dt>Reload only tab groups in current window:</dt>
           <dd><input id="reloadGroupedOnly" type="checkbox" /></dd>
           <dt>Reload all tabs to the left:</dt>
           <dd><input id="reloadAllLeft" type="checkbox" /></dd>
           <dt>Reload all tabs to the right:</dt>
           <dd><input id="reloadAllRight" type="checkbox" /></dd>
-          <dt>Reload all tabs that starts with urls(comma separated):</dt>
+          <dt>Reload all tabs that starts with urls (comma separated):</dt>
           <dd><textarea id="reloadAllMatched" placeholder="www.example1.com, www.example2.com" maxlength="1000"></textarea></dd>
           <dt>Close all tabs to the left:</dt>
           <dd><input id="closeAllLeft" type="checkbox" /></dd>
