feat: add configurable delay between tab reloads

--- a/options.html
+++ b/options.html
@@ -119,6 +119,21 @@
               Bypass Cache when reloading
             </label>
           </div>
+          <div class="option-group">
+            <label for="reloadDelay">Delay between reloading tabs:</label>
+            <select id="reloadDelay" name="reloadDelay">
+              <option value="0">None</option>
+              <option value="10">10ms</option>
+              <option value="50">50ms</option>
+              <option value="100">100ms</option>
+              <option value="200">200ms</option>
+              <option value="300">300ms</option>
+              <option value="400">400ms</option>
+              <option value="500">500ms</option>
+              <option value="750">750ms</option>
+              <option value="1000">1s</option>
+            </select>
+          </div>
         </div>
       </section>
       
