feat: add option to allow reload all tabs except active
Fixes #51

--- a/options.html
+++ b/options.html
@@ -120,6 +120,12 @@
             </label>
           </div>
           <div class="option-group">
+            <label for="excludeActiveTab">
+              <input id="excludeActiveTab" type="checkbox" name="excludeActiveTab" />
+              Exclude current active tab from reload
+            </label>
+          </div>
+          <div class="option-group">
             <label for="reloadDelay">Delay between reloading tabs:</label>
             <select id="reloadDelay" name="reloadDelay">
               <option value="0">None</option>
