feat: skip reload on audible tabs
Fixes #60

--- a/options.html
+++ b/options.html
@@ -126,6 +126,12 @@
             </label>
           </div>
           <div class="option-group">
+            <label for="excludeAudioTabs">
+              <input id="excludeAudioTabs" type="checkbox" name="excludeAudioTabs" />
+              Exclude tabs playing audio from reload
+            </label>
+          </div>
+          <div class="option-group">
             <label for="reloadDelay">Delay between reloading tabs:</label>
             <select id="reloadDelay" name="reloadDelay">
               <option value="0">None</option>
