fix: webstore link

--- a/options.html
+++ b/options.html
@@ -19,7 +19,7 @@
     <main>
       <p>
         Make sure you save the settings after you're done editing!
-        <a href="https://chrome.google.com/webstore/detail/midkcinmplflboepnahkboeonkam" rel="noopener noreferrer">
+        <a href="https://chromewebstore.google.com/detail/reload-all-tabs/midkcinmplflbiflboepnahkboeonkam" rel="noopener noreferrer">
           Visit extension page
         </a>,
         <a href="https://github.com/mohamedmansour/reload-all-tabs-extension/issues" rel="noopener noreferrer">
