fix: remove flash in options

--- a/options.html
+++ b/options.html
@@ -33,7 +33,7 @@
       <section class="extension-template" aria-labelledby="browser-action-heading">
         <h2 class="extension-header" id="browser-action-heading">Browser Action</h2>
         <div class="extension-options">
-          <img src="/img/browser-action.png" alt="Reload All Tabs Browser Action" loading="lazy" />
+          <img width="248" height="40" src="/img/browser-action.png" alt="Reload All Tabs Browser Action" />
           <p>To remove the button, right click on the icon and choose
             <strong>Hide button</strong>.
           </p>
@@ -155,7 +155,7 @@
           <p>To setup the keyboard shortcut or change it, please visit the shortcuts page in Chrome:
             <button type="button" id="keyboardShortcutUpdate" class="link-button">chrome://extensions/shortcuts</button>
           </p>
-          <img src="/img/keyboard-shortcut.png" alt="Reload All Tabs Keyboard Shortcut" loading="lazy" />
+          <img width="417" height="81" src="/img/keyboard-shortcut.png" alt="Reload All Tabs Keyboard Shortcut" />
           <div class="option-group">
             <span class="option-label">Current keyboard shortcut:</span>
             <span id="keyboardShortcut" aria-live="polite"></span>
