chore: refactor to files

--- a/options.html
+++ b/options.html
@@ -7,7 +7,7 @@
   <meta name="color-scheme" content="light dark">
   <title>Reload All Tabs Options</title>
   <link rel="stylesheet" type="text/css" href="/css/options.css" />
-  <script type="text/javascript" src="/options.js"></script>
+  <script type="module" src="/js/options/index.js"></script>
 </head>
 
 <body>
