--- a/options.html
+++ b/options.html
@@ -107,6 +107,12 @@
             </label>
             <textarea id="reloadAllMatched" name="reloadAllMatched" placeholder="www.example1.com, www.example2.com" maxlength="1000" rows="3"></textarea>
           </div>
+          <div class="option-group">
+            <label for="excludeAllMatched">
+              Exclude all tabs that starts with urls (comma separated):
+            </label>
+            <textarea id="excludeAllMatched" name="excludeAllMatched" placeholder="www.example1.com, www.example2.com" maxlength="1000" rows="3"></textarea>
+          </div>
         </div>
       </section>
       
