--- a/options.html
+++ b/options.html
@@ -152,6 +152,12 @@
               <option value="1000">1s</option>
             </select>
           </div>
+          <div class="option-group">
+            <label for="skipMatchedTabs">
+              Skip tabs matching URL patterns (comma separated, * for wildcard):
+            </label>
+            <textarea id="skipMatchedTabs" name="skipMatchedTabs" placeholder="example.com, *.github.com/*, https://app.example.com/*" maxlength="1000" rows="3"></textarea>
+          </div>
         </div>
       </section>
 
